// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> Default story renders snapshot 1`] = `
<article
  class="card"
  data-bootstrap-override="card"
>
  <header
    class="card__header"
  >
    <div
      class="fpo"
    >
      Card Header
    </div>
  </header>
  <div
    class="card__body"
  >
    <div
      class="fpo"
    >
      Card Body
    </div>
  </div>
  <footer
    class="card__footer"
  >
    <div
      class="fpo"
    >
      Card Footer
    </div>
  </footer>
</article>
`;

exports[`<Card /> Horizontal story renders snapshot 1`] = `
<article
  class="card card--horizontal"
  data-bootstrap-override="card"
>
  <header
    class="card__header"
  >
    <div
      class="fpo"
    >
      Card Header
    </div>
  </header>
  <div
    class="card__body"
  >
    <div
      class="fpo"
    >
      Card Body
    </div>
  </div>
  <footer
    class="card__footer"
  >
    <div
      class="fpo"
    >
      Card Footer
    </div>
  </footer>
</article>
`;

exports[`<Card /> Raised story renders snapshot 1`] = `
<article
  class="card card--raised"
  data-bootstrap-override="card"
>
  <header
    class="card__header"
  >
    <div
      class="fpo"
    >
      Card Header
    </div>
  </header>
  <div
    class="card__body"
  >
    <div
      class="fpo"
    >
      Card Body
    </div>
  </div>
  <footer
    class="card__footer"
  >
    <div
      class="fpo"
    >
      Card Footer
    </div>
  </footer>
</article>
`;
